--- a/angular.json
+++ b/angular.json
@@ -136,7 +136,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "9131bbe0-4ecb-434c-9250-697869c320e1"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
